syntax = "proto3";

package grpc.product.discount;
option go_package = "proto/discountpb";

message DiscountRequest {
    string product_id = 1;
    string user_id = 2;
}

message DiscountResponse {
    float pct = 1;
    int64 value_in_cents = 2;
}

service DiscountService {
    rpc Calculate(DiscountRequest) returns (DiscountResponse) {};
}